--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,12 @@
-# Core Trading Libraries
-ccxt==4.0.127
-binance-futures-connector==3.10.0
-python-binance==1.0.19
-
-# Email & Notifications
-IMAPClient==3.0.1
-email-validator==2.1.0
-
-# Data Processing
-pandas==2.1.3
-numpy==1.26.3
-pytz==2023.3
-
-# Configuration Management
-python-dotenv==1.0.0
-pyyaml==6.0.1
-jsonschema==4.20.0
-
-# Logging & Monitoring
-python-json-logger==2.0.7
-coloredlogs==15.0.1
-
-# API & Web
-requests==2.31.0
-aiohttp==3.9.1
-websockets==12.0
-
-# Database & Storage
-sqlalchemy==2.0.23
-sqlite3-python==1.0.0
-
-# Testing & Quality
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-asyncio==0.21.1
-black==23.12.0
-flake8==6.1.0
-mypy==1.7.1
-
-# Backtesting
-backtrader==1.9.94.122
-bt==0.2.3
-
-# Utilities
-python-dateutil==2.8.2
-click==8.1.7
-rich==13.7.0
-tenacity==8.2.3
-
-# Performance
-psutil==5.9.6
-memory-profiler==0.61.0
+playwright
+langchain
+langchain-core
+langchain-community
+langchain-google-genai
+langchain-openai
+python-binance
+pydantic
+python-dotenv
+beautifulsoup4
+html2text
+colorama
